# to_buy_or_not_to_buy

./: .gitignore  LICENSE  MODULE.bazel  README.md  format.sh  pyproject.toml  requirements.txt
src/to_buy_or_not_to_buy/: BUILD.bazel  compound_interest.py  main.py
src/to_buy_or_not_to_buy/helpers/: logger.py  mortgage_helpers.py  plots.py  projected_wealth.py  property_helpers.py  rental_helpers.py
src/to_buy_or_not_to_buy/types/: investment.py  mortgage.py  rental.py  target_property.py  variables.py
test/helpers/: BUILD.bazel  test_mortgage.py  test_rental.py
